Page width set to 100vw to fix jumping header bg

--- a/src/styles/blocks/_page-content.scss
+++ b/src/styles/blocks/_page-content.scss
@@ -1,4 +1,5 @@
 .page-content {
+  width: 100vw;
   min-width: 20rem;
   color: $color-primary;
   font-family: Inter, sans-serif;
